--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Dependencies
 /node_modules
+package-lock.json
 
 # Production
 /build
@@ -16,6 +17,7 @@
 .env.test.local
 .env.production.local
 
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
