--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "deploy": "docusaurus deploy"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-alpha.74",
-    "@docusaurus/plugin-client-redirects": "^2.0.0-alpha.74",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.74",
+    "@docusaurus/core": "^2.0.0-alpha.75",
+    "@docusaurus/plugin-client-redirects": "^2.0.0-alpha.75",
+    "@docusaurus/plugin-ideal-image": "2.0.0-alpha.75",
+    "@docusaurus/preset-classic": "^2.0.0-alpha.75",
     "classnames": "^2.2.6",
     "prism-react-renderer": "^1.1.1",
     "react": "^16.8.4",
