--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "md",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": true,
   "scripts": {
     "start": "docusaurus start",
@@ -9,14 +9,14 @@
     "deploy": "docusaurus deploy"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-alpha.75",
-    "@docusaurus/plugin-client-redirects": "^2.0.0-alpha.75",
-    "@docusaurus/plugin-ideal-image": "2.0.0-alpha.75",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.75",
-    "classnames": "^2.2.6",
-    "prism-react-renderer": "^1.1.1",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "@docusaurus/core": "^2.0.0-beta.0",
+    "@docusaurus/plugin-client-redirects": "^2.0.0-beta.0",
+    "@docusaurus/plugin-ideal-image": "2.0.0-beta.0",
+    "@docusaurus/preset-classic": "^2.0.0-beta.0",
+    "classnames": "^2.3.1",
+    "prism-react-renderer": "^1.2.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
