--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "deploy": "docusaurus deploy"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-beta.22",
-    "@docusaurus/plugin-client-redirects": "^2.0.0-beta.22",
-    "@docusaurus/plugin-ideal-image": "2.0.0-beta.22",
-    "@docusaurus/preset-classic": "^2.0.0-beta.22",
-    "classnames": "^2.3.1",
-    "prism-react-renderer": "^1.2.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "@docusaurus/core": "^2.0.0-rc.1",
+    "@docusaurus/plugin-client-redirects": "^2.0.0-rc.1",
+    "@docusaurus/plugin-ideal-image": "2.0.0-rc.1",
+    "@docusaurus/preset-classic": "^2.0.0-rc.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
