--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "md",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "private": true,
   "scripts": {
     "start": "docusaurus start",
@@ -13,27 +13,12 @@
     "@docusaurus/plugin-client-redirects": "^2.0.0-rc.1",
     "@docusaurus/plugin-ideal-image": "2.0.0-rc.1",
     "@docusaurus/preset-classic": "^2.0.0-rc.1",
+    "clsx": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.20.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-md": "^1.1.7",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-html": "^6.0.2",
-    "eslint-plugin-import": "^2.21.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
-    "prettier": "^2.0.5"
-  },
-  "eslintConfig": {
-    "extends": [
-      "md"
-    ]
+    "@docusaurus/eslint-plugin": "2.0.0-rc.1"
   },
   "browserslist": {
     "production": [
