--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "md",
-  "version": "0.8.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "docusaurus start",
@@ -9,16 +9,16 @@
     "deploy": "docusaurus deploy"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-rc.1",
-    "@docusaurus/plugin-client-redirects": "^2.0.0-rc.1",
-    "@docusaurus/plugin-ideal-image": "2.0.0-rc.1",
-    "@docusaurus/preset-classic": "^2.0.0-rc.1",
+    "@docusaurus/core": "^2.0.1",
+    "@docusaurus/plugin-client-redirects": "^2.0.1",
+    "@docusaurus/plugin-ideal-image": "2.0.1",
+    "@docusaurus/preset-classic": "^2.0.1",
     "clsx": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/eslint-plugin": "2.0.0-rc.1"
+    "@docusaurus/eslint-plugin": "2.0.1"
   },
   "browserslist": {
     "production": [
